kube-infra/kustomize/demo/argo-rollouts-demo/overlays/production/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stable
  namespace: ortelius-prod
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-demo
