kube-infra/kustomize/demo/argo-rollouts-demo/overlays/production/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-stable
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "false"
spec:
  rules:
  - host: canary.ortelius.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-stable
            port:
              number: 80
