kube-infra/kustomize/demo/argo-rollouts-demo/overlays/production/canary-preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-canary-stable-canary
  annotations:
    ingress.kubernetes.io/app-root: /
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "false"
spec:
  rules:
  - host: canary-preview.ortelius.eastus.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: canary-demo-preview
            port:
              number: 80
